correcting input styles on safari

--- a/css/styles.css
+++ b/css/styles.css
@@ -62,4 +62,6 @@ input {
   border: none;
   font-size: 1.2em;
   padding: 0.3em;
+  -webkit-apearance: none;
+  -webkit-border-radius: 3px;
 }
